@@ -74,7 +74,7 @@ import org.gjt.sp.jedit.textarea.*;
  *
  * @author Slava Pestov
  * @author John Gellene (API documentation)
- * @version $Id: View.java,v 1.62 2003/03/16 05:37:51 spestov Exp $
+ * @version $Id: View.java,v 1.63 2003/03/16 20:55:42 spestov Exp $
  */
 public class View extends JFrame implements EBComponent
 {
@@ -1183,12 +1183,7 @@ public class View extends JFrame implements EBComponent
 
 	//{{{ getSplitConfig() method
 	/*
-	 * The split config is recorded in a simple RPN "language":
-	 * "vertical" pops the two topmost elements off the stack, creates a
-	 * vertical split
-	 * "horizontal" pops the two topmost elements off the stack, creates a
-	 * horizontal split
-	 * A path name creates an edit pane editing that buffer
+	 * The split config is recorded in a simple RPN "language".
 	 */
 	private void getSplitConfig(JSplitPane splitPane,
 		StringBuffer splitConfig)
@@ -1334,7 +1329,7 @@ public class View extends JFrame implements EBComponent
 				removeToolBar(searchBar);
 
 			addToolBar(TOP_GROUP,SEARCH_BAR_LAYER,
-				new SearchBar(this,false));
+				searchBar = new SearchBar(this,false));
 		}
 		else if(searchBar != null)
 		{
