@@ -38,7 +38,7 @@ import org.gjt.sp.util.Log;
  * called through, implements such protection.
  *
  * @author Slava Pestov
- * @version $Id: OffsetManager.java,v 1.38 2003/03/16 05:37:51 spestov Exp $
+ * @version $Id: OffsetManager.java,v 1.39 2003/03/16 20:55:45 spestov Exp $
  * @since jEdit 4.0pre1
  */
 public class OffsetManager
@@ -230,7 +230,15 @@ public class OffsetManager
 	public final void setLineContext(int line, TokenMarker.LineContext context)
 	{
 		if(line > lastValidLineContext)
+		{
+			// maybe this loop only ever happends in text mode?
+			for(int i = lastValidLineContext + 1; i < line; i++)
+			{
+				lineInfo[i] &= ~LINE_CONTEXT_VALID_MASK;
+			}
+
 			lastValidLineContext = line;
+		}
 
 		lineContext[line] = context;
 		lineInfo[line] |= LINE_CONTEXT_VALID_MASK;
@@ -490,6 +498,12 @@ public class OffsetManager
 	public void lineContextInvalidFrom(int startLine)
 	{
 		lastValidLineContext = Math.min(lastValidLineContext,startLine);
+	} //}}}
+
+	//{{{ getLastValidLineContext() method
+	public int getLastValidLineContext()
+	{
+		return lastValidLineContext;
 	} //}}}
 
 	//{{{ Private members
