@@ -277,15 +277,20 @@ view.expandOnInput=false
 #{{{ Syntax styles
 view.style.comment1=color:#990033
 view.style.comment2=color:#6600cc
+view.style.comment3=color:#6600cc
+view.style.comment4=color:#6600cc
 view.style.digit=color:#ff0000
 view.style.function=color:#9966ff
 view.style.invalid=color:#ff0066 bgColor:#ffffcc
 view.style.keyword1=color:#006699 style:b
 view.style.keyword2=color:#009966 style:b
 view.style.keyword3=color:#cc6600 style:b
+view.style.keyword4=color:#cc6600 style:b
 view.style.label=color:#006666
 view.style.literal1=color:#cd8f8f
 view.style.literal2=color:#cc6600
+view.style.literal3=color:#cc6600
+view.style.literal4=color:#cc6600
 view.style.markup=color:#7b7b7b
 view.style.operator=color:#990099 style:b
 view.style.foldLine.1=bgColor:#fff0cc style:b
